fix: increase z-index for the sticky nav bar

--- a/client/src/css/components/navigationbar.css
+++ b/client/src/css/components/navigationbar.css
@@ -5,6 +5,7 @@
     border-bottom: 1px solid #411d0d;
     position: sticky;
     backdrop-filter: blur(4rem);
+    z-index: 1;
 }
 
 .nav-logo {
